# SDL2_Project_Template

./: CMakeLists.txt  LICENSE  README.md
src/: constants.h  main.c
src/render_helper/: rendering_helper.c  rendering_helper.h  text_rendering.c  text_rendering.h
src/socket/: sockets.h
